<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_margin="20dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/iburger_logo"
                android:contentDescription="@string/logo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="50dp"
                android:layout_marginVertical="20dp"
                android:background="@color/yellow">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textAllCaps="true"
                    android:textColor="@color/dark_gray"
                    android:inputType="textEmailAddress"
                    android:gravity="center_horizontal"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginVertical="20dp"
                app:passwordToggleEnabled="false"
                android:background="@color/yellow">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/dark_gray"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textAllCaps="true"
                    android:textColor="@color/dark_gray"
                    android:gravity="center_horizontal"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="0.2"
                android:layout_gravity="center_horizontal"
                android:text="@string/forget_password"
                android:textAllCaps="true"
                android:textColor="@color/dark_gray"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/do_not_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="0.2"
                android:layout_gravity="center_horizontal"
                android:text="@string/do_not_have_account"
                android:textAllCaps="true"
                android:layout_marginVertical="20dp"
                android:textColor="@color/orange" />

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_gravity="center_horizontal"
                android:text="@string/login"
                android:textColor="@color/orange"
                android:layout_marginVertical="20dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

    </LinearLayout>
</ScrollView>
