<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup"
    android:background="@drawable/background_two">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/iburger_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="20dp"
            android:contentDescription="@string/logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/full_name_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="20dp"
            android:layout_below="@+id/logo"
            android:background="@color/yellow">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:textAllCaps="true"
                android:textColor="@color/dark_gray"
                android:inputType="text"
                android:gravity="center_horizontal"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_number_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="20dp"
            android:layout_below="@+id/full_name_layout"
            android:background="@color/yellow">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:textAllCaps="true"
                android:textColor="@color/dark_gray"
                android:inputType="number"
                android:gravity="center_horizontal"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="20dp"
            android:layout_below="@+id/phone_number_layout"
            android:background="@color/yellow">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textAllCaps="true"
                android:textColor="@color/dark_gray"
                android:inputType="textEmailAddress"
                android:gravity="center_horizontal"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/location_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="20dp"
            android:layout_below="@+id/email_layout"
            android:background="@color/yellow">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location"
                android:textAllCaps="true"
                android:textColor="@color/dark_gray"
                android:inputType="text"
                android:gravity="center_horizontal"
                android:editable="false"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="20dp"
            android:layout_below="@id/location_layout"
            app:passwordToggleEnabled="false"
            android:background="@color/yellow">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textAllCaps="true"
                android:textColor="@color/dark_gray"
                android:inputType="textPassword"
                android:gravity="center_horizontal"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/re_password_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="20dp"
            android:layout_below="@id/password_layout"
            app:passwordToggleEnabled="false"
            android:background="@color/yellow">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/re_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/re_password"
                android:textAllCaps="true"
                android:textColor="@color/dark_gray"
                android:inputType="textPassword"
                android:gravity="center_horizontal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:background="@null"
            android:layout_below="@id/re_password_layout"
            android:layout_centerHorizontal="true"
            android:textColor="@color/orange"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:layout_marginVertical="20dp"/>

    </RelativeLayout>
</ScrollView>