<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginVertical="10dp">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/item_two"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/order_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginVertical="10dp"
            android:src="@drawable/fast_food" />

        <TextView
            android:id="@+id/order_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:letterSpacing="0.2"
            android:gravity="center"
            android:text="@string/cheese_burger"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/dark_gray"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/order_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5jd"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/order_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:background="@drawable/plus_minus_container_horizontal"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/plus"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="4dp"
            android:src="@drawable/plus" />

        <ImageView
            android:id="@+id/minus"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="4dp"
            android:src="@drawable/minus" />

    </LinearLayout>
</LinearLayout>